feat: add repo and manager
